# doc-explorer

./: .gitignore  Cargo.toml
src/: document.rs  embed.rs  json_generator.rs  lib.rs  ollama.rs  prompt.rs
